--- a/index.html
+++ b/index.html
@@ -34,34 +34,32 @@
     <!---  HEADER  START  -->
 
     <header>
-        <div class="container">
-            <div class="header-wrapper">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="assets/images/logo.svg" alt="">
-                    </a>
+        <div class="header-wrapper">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="assets/images/logo.svg" alt="">
+                </a>
+            </div>
+            <div class="header-info-area">
+                <div class="lang-wrapper">
+                    العربية
                 </div>
-                <div class="header-info-area">
-                    <div class="lang-wrapper">
-                        العربية
-                    </div>
-                    <div class="info d-flex align-items-center justify-content-center">
-                        <img src="assets/images/info.svg" alt="">
-                    </div>
-                    <div class="shopping-cart">
-                        <div class="picture">
-                            <img src="assets/images/shopping-cart.png" alt="">
-                            <div class="quantity">
-                                <span>34</span>
-                            </div>
-                        </div>
-                        <div class="number">
-                            BD 114.430
+                <div class="info d-flex align-items-center justify-content-center">
+                    <img src="assets/images/info.svg" alt="">
+                </div>
+                <div class="shopping-cart">
+                    <div class="picture">
+                        <img src="assets/images/shopping-cart.png" alt="">
+                        <div class="quantity">
+                            <span>34</span>
                         </div>
                     </div>
-                    <div class="burger-menu" onclick="main()">
-                        <img src="assets/images/burger-menu.svg" alt="">
+                    <div class="number">
+                        BD 114.430
                     </div>
+                </div>
+                <div class="burger-menu" onclick="main()">
+                    <img src="assets/images/burger-menu.svg" alt="">
                 </div>
             </div>
         </div>
@@ -346,9 +344,9 @@
                         <a href="/">Comfort Food <img src="assets/images/btm-cancel.svg" alt=""></a>
                     </div>
                     <div class="product-grid-wrapper">
-                        <h4>21 Restaurant</h4>
-                        <div class="row">
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                        <div class="count">21 Restaurant</div>
+                        <div class="row no-gutters">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -382,7 +380,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -416,7 +414,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -450,7 +448,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -484,7 +482,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -518,7 +516,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -552,7 +550,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -586,7 +584,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
@@ -620,7 +618,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-4 col-sm-6 col-12">
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
                                 <div class="product-box">
                                     <div class="image-wrapper">
                                         <a href="product-detail.html" class="image">
