--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
                             </div>
                         </div>
 
-                        <div class="card active">
-                            <div class="card-header" id="headingFive">
+                        <div class="card active open">
+                            <div class="card-header" id="categoriesFilter">
                                 <h2 class="mb-0 collapsed">Categories</h2>
                             </div>
                             <div id="collapseFive" class="collapse">
