--- a/checkout-3.html
+++ b/checkout-3.html
@@ -111,7 +111,7 @@
                                  <img src="assets/images/clock.svg" alt=""> <p>Deliver in 20-30 minutes</p>
                                 </div>
                             </div>
-                            <div class="signin-login-form">
+                            <div class="login-form">
                                 <div class="container">
                                     <div class="row justify-content-center">
                                         <div class="col-12">
