--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
 
 <!---  HEADER  END  -->
 
-<div class="signin-login-form">
+<div class="login-form">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-sm-auto col-12">
