--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                     <ul class="order-type">
                         <li class="filter-radio">
-                            <input type="radio" name="type" id="radio0"/>
+                            <input type="radio" name="type" id="radio0" checked/>
                             <label for="radio0">Delivery</label>
                         </li>
                         <li class="filter-radio">
