--- a/my-orders.html
+++ b/my-orders.html
@@ -144,12 +144,30 @@
                                                 </div>
                                                 <div class="list">
                                                     <ul>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
-                                                        <li><a href="/">AMWAJ</a></li>
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li>
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li>
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li>
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li>
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li> 
+                                                        <li>
+                                                            <label for="" class="d-lg-none d-block">restaurent</label>
+                                                            <a href="/">AMWAJ</a>
+                                                        </li>
                                                     </ul>
                                                 </div>
                                             </div>
