--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -131,7 +131,7 @@
           </div>
      </section>
 
-     <!---   ORDER CONFIRMATION  -->
+     <!--  ORDER CONFIRMATION  -->
 
      <!--- FOOTER --->
 
@@ -210,7 +210,7 @@
             </div>
         </div>
     </div>
-</footer>
+   </footer>
 
 
 <!--- FOOTER --->
