--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0 collapsed">
+                                    <span>
+                                        <svg height="24" width="24" viewBox="0 0 24 24" class="ccl-0f24ac4b87ce1f67 ccl-abe5c41af1b9498e ccl-94235a1794a6d4be"><path d="M21.5 9.6L19.9444 11.1556L17 8.21126V20H15V8.21126L12.0557 11.1556L10.5 9.6L16 4L21.5 9.6Z"></path><path d="M2.5 14.4L4.05558 12.8444L7 15.7887V4H9V15.7887L11.9443 12.8444L13.5 14.4L8 20L2.5 14.4Z"></path></svg>
+                                    </span>
                                     Sort
                                 </h2>
                             </div>
@@ -185,7 +188,12 @@
                         </div>
                         <div class="card active">
                             <div class="card-header" id="headingTwo">
-                                <h2 class="mb-0 collapsed">Cuisines</h2>
+                                <h2 class="mb-0 collapsed">
+                                    <span>
+                                        <svg height="24" width="24" viewBox="0 0 24 24" class="ccl-0f24ac4b87ce1f67 ccl-abe5c41af1b9498e ccl-94235a1794a6d4be"><path d="M15.55 11.8642L13.8012 13.6129L19.749 20.3375L18.2509 21.6625L12.3844 15.0298L5.70707 21.7071L4.29286 20.2929L11.0568 13.5289L9.67929 12.112L6.93679 14.8345L2.99365 8.15994L4.35279 2.93054L12.4737 12.112L14.1358 10.45L12.7929 9.1071L12.8008 7.68498L17.3008 3.28498L18.6991 4.715L14.9222 8.40798L15.55 9.03578L19.2929 5.29288L20.7071 6.7071L16.9642 10.45L17.5079 10.9937L21.3008 7.28498L22.6991 8.715L18.1991 13.115L16.7929 13.1071L15.55 11.8642ZM5.34352 7.06944L5.14324 7.84003L7.32097 11.6642L8.40646 10.6124L5.34352 7.06944Z"></path></svg>
+                                    </span>
+                                    Cuisines
+                                </h2>
                             </div>
                             <div id="collapseTwo" class="collapse">
                                 <div class="card-body">
@@ -213,7 +221,13 @@
 
                         <div class="card active">
                             <div class="card-header" id="headingThree">
-                                <h2 class="mb-0 collapsed">Offers</h2>
+                                <h2 class="mb-0 collapsed">
+                                    <span>
+                                        <svg height="24" width="24" viewBox="0 0 24 24" class="ccl-0f24ac4b87ce1f67 ccl-abe5c41af1b9498e ccl-94235a1794a6d4be"><path d="M4.82843 13L11 19.1716L18 12.1716V6H11.8284L4.82843 13ZM11 4H20V13L11 22L2 13L11 4ZM14.5 11C15.3284 11 16 10.3284 16 9.5C16 8.67157 15.3284 8 14.5 8C13.6716 8 13 8.67157 13 9.5C13 10.3284 13.6716 11 14.5 11Z"></path></svg>
+                                    </span>
+
+                                    Offers
+                                </h2>
                             </div>
                             <div id="collapseThree" class="collapse">
                                 <div class="card-body">
@@ -254,9 +268,16 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card active">
                             <div class="card-header" id="headingFour">
-                                <h2 class="mb-0 collapsed">Price Range</h2>
+                                <h2 class="mb-0 collapsed">
+                                    <span>
+                                        <svg height="24" width="24" viewBox="0 0 24 24" class="ccl-0f24ac4b87ce1f67 ccl-abe5c41af1b9498e ccl-94235a1794a6d4be"><path d="M4.82843 13L11 19.1716L18 12.1716V6H11.8284L4.82843 13ZM11 4H20V13L11 22L2 13L11 4ZM14.5 11C15.3284 11 16 10.3284 16 9.5C16 8.67157 15.3284 8 14.5 8C13.6716 8 13 8.67157 13 9.5C13 10.3284 13.6716 11 14.5 11Z"></path></svg>
+                                    </span>
+                                    
+                                    Price Range
+                                </h2>
                             </div>
                             <div id="collapseFour" class="collapse">
                                 <div class="card-body">
@@ -333,6 +354,18 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="apply-filters">
+                            <div class="wrapper">
+                                <div class="option">
+                                    <button type="button" class="primary-btn" tabindex="0"><span class="ccl-cce251427bbe4ec4">Apply</span></button>
+                                </div>
+                                <div class="option">
+                                    <button type="button" class="default-btn" tabindex="0"><span class="ccl-cce251427bbe4ec4">Clear all</span></button>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
