--- a/checkout-1.html
+++ b/checkout-1.html
@@ -416,7 +416,7 @@
                     </div>
                 </div>
                     <div class="actions">
-                        <a href="/checkout-2.html">Go To Checkout</a>
+                        <a href="checkout-2.html">Go To Checkout</a>
                     </div>
                    <div class="flex-area border-area">
                     <div class="increment d-flex">
