--- a/edit-profile.html
+++ b/edit-profile.html
@@ -155,7 +155,7 @@
                                 <input type="Mobile number" class="form-control" placeholder="Mobile Number">
                             </div> 
 
-                            <div class="actions mx-sm-0 mx-3">
+                            <div class="actions mx-sm-0 mx-3 d-flex justify-content-sm-start justify-content-center">
                                 <button class="btn-submit">SUBMIT</button>
                             </div>
                         </form>
