--- a/product-detail.html
+++ b/product-detail.html
@@ -314,7 +314,7 @@
                         <button type="button" class="default-btn" popup-close="#popup1">Cancel</button>
                     </div>
                     <div class="option">
-                        <button type="button" class="primary-btn">Add for £16.00</button>
+                        <a href="checkout-1.html" class="primary-btn">Add for £16.00</a>
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
                         <button type="button" class="default-btn" popup-close="#popup2">Cancel</button>
                     </div>
                     <div class="option">
-                        <button type="button" class="primary-btn">Add for £16.00</button>
+                        <a href="checkout-1.html" class="primary-btn">Add for £16.00</a>
                     </div>
                 </div>
             </div>
@@ -419,7 +419,7 @@
             <div class="c-modal-footer">
                 <div class="actions">
                     <div class="option">
-                        <button type="button" class="default-btn" popup-close="#popup3">Close</button>
+                        <a href="" class="default-btn" popup-close="#popup3">Close</a>
                     </div>
                 </div>
             </div>
