--- a/checkout-2.html
+++ b/checkout-2.html
@@ -131,7 +131,7 @@
                                                         <p>or</p>
                                                         </div>
                                                         <div class="button-email">
-                                                            <a href="/checkout-3.html"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
+                                                            <a href="checkout-3.html"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
                                                         </div> 
                                                         <p class="meta">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>     
                                             </div>
