--- a/checkout-3.html
+++ b/checkout-3.html
@@ -127,10 +127,10 @@
                                                 <input type="password" class="form-control" name="" id="" placeholder="" value="">
                                             </div>   
                                             <div class="login-button">
-                                                <a href="/checkout-4.html">LOGIN</a>
+                                                <a href="checkout-4.html">LOGIN</a>
                                             </div>   
                                             <div class="forgot-pass">
-                                                <a href="/">FORGOT PASSWORD?</a>
+                                                <a href="login.html">FORGOT PASSWORD?</a>
                                             </div>   
                                             </div>
                                         </div>
