--- a/checkout-address.html
+++ b/checkout-address.html
@@ -31,7 +31,7 @@
 
         <style>
             .option.custom-radio input {opacity:0; position:absolute; top:-1000%; left:-1000%; visibility:hidden;}
-            .option.custom-radio label {min-height:23px;background-image:url('assets/images/border-grey.svg'); background-repeat:no-repeat; padding-left:50px;}
+            .option.custom-radio label {min-height:23px;background-image:url('assets/images/border-grey.svg'); background-repeat:no-repeat; padding-left:35px;}
             .option.custom-radio input:checked ~ label {background-image:url('assets/images/border-blue.svg');}
         </style>
     </head>
@@ -148,16 +148,16 @@
                                             <h2>Delivery Address</h2>
                                         </div>
                                     <div class="row">
-                                        <div class="col-lg-6 mb-4">
+                                        <div class="col-lg-6 mb-3">
                                             <input type="text" name="" id="" placeholder="Alanood" class="form-control">
                                         </div>
-                                        <div class="col-lg-6 mb-4">
+                                        <div class="col-lg-6 mb-3">
                                             <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
                                         </div>
-                                        <div class="col-lg-6 mb-4">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
+                                        <div class="col-lg-6 mb-3">
+                                            <input type="text" name="" id="" placeholder="Mobile" class="form-control">
                                         </div>
-                                        <div class="col-lg-6 mb-4">
+                                        <div class="col-lg-6 mb-3">
                                             <select id="Select Area" class="form-control">
                                                 <option value="volvo">Select Area</option>
                                                 <option value="volvo">Select Area</option>
@@ -165,20 +165,20 @@
                                                 <option value="volvo">Select Area</option>
                                             </select>                                       
                                         </div>
-                                        <div class="col-lg-6 mb-4">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control"> 
+                                        <div class="col-lg-6 mb-3">
+                                            <input type="text" name="" id="" placeholder="Flat" class="form-control"> 
                                         </div>
-                                        <div class="col-lg-6 mb-4">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
+                                        <div class="col-lg-6 mb-3">
+                                            <input type="text" name="" id="" placeholder="Building / Villa" class="form-control">
                                         </div>
-                                        <div class="col-lg-6 mb-4">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
+                                        <div class="col-lg-6 mb-3">
+                                            <input type="text" name="" id="" placeholder="Road" class="form-control">
                                         </div>
-                                        <div class="col-lg-6 mb-4">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
+                                        <div class="col-lg-6 mb-3">
+                                            <input type="text" name="" id="" placeholder="Block" class="form-control">
                                         </div>
                                         <div class="col-12">
-                                            <input type="text" name="" id="" placeholder="Alshaikha" class="form-control">
+                                            <input type="text" name="" id="" placeholder="Special Direction (Optional)" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -224,19 +224,19 @@
                                             <h2>Credit Card</h2>
                                         </div>
                                     <div class="row">
-                                        <div class="col-lg-6 mb-4">
+                                        <div class="col-lg-6 mb-3">
                                             <input type="text" name="" id="" class="form-control">
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-6 mb-4">
+                                        <div class="col-lg-6 mb-3">
                                             <input type="text" name="" id="" class="form-control" value="444242342342424242">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="row">
-                                                <div class="col-lg-6">
+                                                <div class="col-lg-6 mb-xl-0 mb-3">
                                                     <input type="text" name="" id="" placeholder="MM / YY" class="form-control">
                                                 </div>
                                                 <div class="col-lg-6">
@@ -245,10 +245,10 @@
                                                         <input type="text" name="" id="" placeholder="CVV" class="form-control">
                                                         <img src="assets/images/Icons.svg" onclick="creditpop()" alt="">
                                                     </div>
-                                                    <div class="d-flex">
+                                                    <div class="d-flex justify-content-end">
                                                         <p>Powered by</p>
                                                          <div>   
-                                                         <img src="assets/images/gcc.png"  alt="">
+                                                         <img src="assets/images/gcc.png" style="margin-top: -5px;"  alt="">
                                                         </div>
                                                     </div>
                                                    </div>
@@ -263,7 +263,7 @@
                                         <a href="/">SAVE</a>
                                     </div>
                                     <div class="confirm-place-order">
-                                        <a href="/">CONFIRM & PLACE ORDER</a>
+                                        <a href="order-confirmation.html">CONFIRM & PLACE ORDER</a>
                                     </div>
                                     <div class="payment-checkout d-flex justify-content-center">
                                         <img src="assets/images/payemt-check.png" alt="">
