--- a/login.html
+++ b/login.html
@@ -113,7 +113,7 @@
                             </div>
                             <p>or</p>
                             <div class="button-email">
-                                <a href="/index.html"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
+                                <a href="reset-your-password-1.html"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
                             </div>      
                 </div>
             </div>
