--- a/reset-your-password-1.html
+++ b/reset-your-password-1.html
@@ -120,7 +120,7 @@
                                     </div>
                             </form>
                             <div class="button-email mx-sm-0 mx-3">
-                                <a href="" class="btn">SAVE NEW PASSWORD</a>
+                                <a href="reset-your-password-2.html" class="btn">SAVE NEW PASSWORD</a>
                             </div>
                 </div>
             </div>
