--- a/reset-your-password-2.html
+++ b/reset-your-password-2.html
@@ -116,7 +116,7 @@
                                 </div>
                             </form>
                             <div class="button-email mx-sm-0 mx-3">
-                                <a href="" class="btn">CONTINUE</a>
+                                <a href="index.html" class="btn">CONTINUE</a>
                             </div>
                 </div>
             </div>
