--- a/dine-in-verification.html
+++ b/dine-in-verification.html
@@ -160,7 +160,7 @@
                             </div>
                             
                             <div class="actions">
-                                <button class="btn-submit">CONFIRM NOW</button>
+                                <a href="dinein-success.html" class="btn-submit">CONFIRM NOW</a>
                             </div>
                         </div>
                     </div>
