--- a/dinein-success.html
+++ b/dinein-success.html
@@ -178,7 +178,7 @@
                             </div>
 
                             <div class="actions">
-                                <a href="/" class="btn-submit">GO TO LISTING</a>
+                                <a href="index.html" class="btn-submit">GO TO LISTING</a>
                             </div>
                         </div>
                     </div>
