text icons changes

--- a/checkout-1.html
+++ b/checkout-1.html
@@ -526,6 +526,7 @@
                         <h3>My Basket</h3>
                         <img src="assets/images/cancel.svg" onclick="checkout()" alt="">
                     </div>
+                    <div class="basket-body">
                    <div class="flex-area">
                     <div class="increment d-flex">
                         <div onclick="decrement()">
@@ -590,6 +591,7 @@
                         <h5>Rider Trip</h5>
                         <h5>BD 0.000</h5>
                     </div>
+                   </div>
                    </div>
                    <div class="bottom-box-basket">
                    <div class="total-area">
