--- a/checkout-4.html
+++ b/checkout-4.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="assets/css/styles.css">
        
         <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
-    
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -152,13 +151,7 @@
 
                                 <div class="row mt-4">
                                     <div class="col-lg-6 mb-3">
-                                        <select name="" id="" class="form-control">
-                                            <option value="">Select Date</option>
-                                            <option value="">Select Date</option>
-                                            <option value="">Select Date</option>
-                                            <option value="">Select Date</option>
-                                            <option value="">Select Date</option>
-                                        </select>
+                                       <input type="date" name="date" id="" placeholder="Select Date" value="Select Date">
                                     </div>
                                     <div class="col-lg-6">
                                         <select name="" id="" class="form-control">
