--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -123,11 +123,11 @@
                       <h2>Order Confirmation</h2>
                   </div>
                   <div class="info">
-                    <p>  Thanks for placing your order #13231231 <br> You will soon receive your order confirmation via email. <br> </p>
+                    <p>  Thanks for placing your order <b> #13231231 </b><br> You will soon receive your order confirmation via email. <br> </p>
                     <p>  Please direct any questions you have to the customer support.</p>
                   </div>
                   <div class="actions">
-                      <a href="">GO TO HOMEPAGE</a>
+                      <a href="index.html">GO TO HOMEPAGE</a>
                   </div>
               </div>
           </div>
