--- a/product-detail.html
+++ b/product-detail.html
@@ -391,7 +391,7 @@
             </div>
 
             <div class="c-modal-content">
-                <div class="optional-head">
+                <div class="optional-head p-0">
                     <h2>Hygience Rating</h2>
                     <p>Romaine, bacon, chicken, parmesan cheese, crouton, red cabbage, Caesar
                         dressing</p>
@@ -400,7 +400,7 @@
                     <div class="info-icon"><img src="assets/images/info.svg" alt="" class="mr-2"></div>
                     <div class="info-text"><p>View Hygience rating</p></div>
                 </div>
-                <div class="optional-head">
+                <div class="optional-head p-0">
                     <h2>Help with allergens</h2>
                     <h6>Question? Call the Restaurants</h6>
                     <p>Ask the restaurants about their ingredient and cooking methods.</p>
@@ -409,7 +409,7 @@
                     <div class="info-icon"><img src="assets/images/phone.svg" alt=""></div>
                     <div class="info-text"><p>Call us now at +973 987 65432</p></div>
                 </div>
-                <div class="optional-head">
+                <div class="optional-head p-0">
                     <h2>Restaurants Notes</h2>
                     <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.<br>
                     Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
